# python-style-guide

./: LICENSE  README.md
A-strongly-recommended/: README.md
A-strongly-recommended/1-README/: README.md
A-strongly-recommended/1-README/README-example/: helloworld.py
A-strongly-recommended/1-README/README-example/helloworld/: __init__.py
A-strongly-recommended/1-README/installation-guide/: README.md
A-strongly-recommended/1-README/installation-guide/build-package/pyproject-toml/: helloworld.py  pyproject.toml
A-strongly-recommended/1-README/installation-guide/build-package/pyproject-toml/helloworld/: module.py
