[project]
name = "pyproject-toml"
version = "0.1.0"
description = "A helloworld example for demonstrating building with a pyproject.toml file."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["packaging, "helloworld", "python", "tutorial", "pyproject.toml"]
authors = [
  {email = "williamywt0624@gmail.com"},
  {name = "Wai-Tsun Yeung"}
]
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Education",
    "Topic :: Software Development :: Build Tools"
]
dependencies = [
  "pyfiglet",
  "numpy >= 1.21"
]
[project.urls]
homepage = "https://github.com/WaiTsun-Yeung/python-style-guide"
repository = "https://github.com/WaiTsun-Yeung/python-style-guide"
documentation = "https://github.com/WaiTsun-Yeung/python-style-guide"

[project.scripts]
pyproject-toml-helloworld = "helloworld:generate_message"